Make CDILiquibaseTest pass - Temporary fix for now